shortening the meta tags descriptions

--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
     <!-- Primary Meta Tags -->
     <title>Software Engineer - Ready for the next adventure.</title>
     <meta name="title" content="Software Engineer - Ready for the next adventure.">
-    <meta name="description" content="I am a Full-Stack Engineer, with experience in different tools and techs.With a passion for tech, knowledge, and good coffee. Up to face challenges, and enjoy the ride.">
+    <meta name="description" content="I am a Full-Stack Engineer, with experience in different tools and techs, passion for code, knowledge, and good coffee. Up to face challenges.">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://epilef-curriculum.herokuapp.com/">
     <meta property="og:title" content="Software Engineer - Ready for the next adventure.">
-    <meta property="og:description" content="I am a Full-Stack Engineer, with experience in different tools and techs.With a passion for tech, knowledge, and good coffee. Up to face challenges, and enjoy the ride.">
+    <meta property="og:description" content="I am a Full-Stack Engineer, with experience in different tools and techs, passion for code, knowledge, and good coffee. Up to face challenges.">
     <meta property="og:image" content="img/logo-v2.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://epilef-curriculum.herokuapp.com/">
     <meta property="twitter:title" content="Software Engineer - Ready for the next adventure.">
-    <meta property="twitter:description" content="I am a Full-Stack Engineer, with experience in different tools and techs.With a passion for tech, knowledge, and good coffee. Up to face challenges, and enjoy the ride.">
+    <meta property="twitter:description" content="I am a Full-Stack Engineer, with experience in different tools and techs, passion for code, knowledge, and good coffee. Up to face challenges.">
     <meta property="twitter:image" content="img/logo-v2.png">
 
     <link rel="apple-touch-icon" sizes="57x57" href="icons/apple-icon-57x57.png">
